--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^1",
+    "clsx": "^2.1.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
