--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^1",
     "clsx": "^2.1.1",
     "next": "14.2.14",
+    "next-theme": "^0.1.5",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^5.0.0"
