--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "next": "14.2.14",
+    "next-auth": "^4.24.11",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.3",
     "react": "^18",
